tenants/aws/common/dummy/networkpolicy-allow-same-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-same-namespace
  namespace: dummy
spec:
  podSelector:
  ingress:
  - from:
    - podSelector: {}
