tenants/aws/common/dummy/networkpolicy-deny-default.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-default
  namespace: dummy
spec:
  podSelector: {}
  ingress: []
